--- a/views/includes/engine-start.ejs
+++ b/views/includes/engine-start.ejs
@@ -1,6 +1,11 @@
 <script>
+    // var canvas = document.getElementById("renderCanvas");
+    // var engine = null;
+    //     var scene = null;
+    //     var createDefaultEngine = function() { return new BABYLON.Engine(canvas, true, { preserveDrawingBuffer: true, stencil: true }); };
     var canvas = document.getElementById("renderCanvas");
     var engine = null;
-        var scene = null;
-        var createDefaultEngine = function() { return new BABYLON.Engine(canvas, true, { preserveDrawingBuffer: true, stencil: true }); };
+    var scene = null;
+    var sceneToRender = null;
+    var createDefaultEngine = function() { return new BABYLON.Engine(canvas, true, { preserveDrawingBuffer: true, stencil: true,  disableWebGL2Support: false}); };
 </script>
